# Rusty-Props

./: .gitignore  Cargo.toml  Makefile  build.rs
src/: algorithm.rs  lib.rs  main.rs  network.rs  ut.rs
src/algorithm/: func.rs  mod.rs
src/training/: mnist.rs
src/ut/: data.rs  mod.rs
