[package]
name = "rusty_props"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
env_logger = "*"
log = "0.4.19"
mnist = "0.5.0"
rand = "0.8.5"

[build-dependencies]
reqwest = {version = "0.10"}
tokio = {version = "0.2", features = ["full"]}
lazy_static = "1.4.0"
libflate = "1.2.0"

[install]
root = '.'
path = '.'
